--- a/src/styles/02-settings/typography.css
+++ b/src/styles/02-settings/typography.css
@@ -63,6 +63,60 @@
   --font-black: 900;
 
   @media (--tablet-and-up) {
-    --body-base-text: 1.25rem; /* This means 16px */
+    --body-base-text: 1.25rem; /* This means 20px */
   }
+}
+
+/* Headings */
+
+.h1 {
+  font-size: var(--heading-7);
+}
+.h2 {
+  font-size: var(--heading-6);
+}
+.h3 {
+  font-size: var(--heading-5);
+}
+.h4 {
+  font-size: var(--heading-4);
+}
+.h5 {
+  font-size: var(--heading-3);
+}
+.h5 {
+  font-size: var(--heading-2);
+}
+.h6 {
+  font-size: var(--heading-1);
+}
+
+/* Text */
+
+.x-small {
+  font-size: var(--text-minus-3);
+}
+
+.small {
+  font-size: var(--text-minus-2);
+}
+
+.medium {
+  font-size: var(--text-minus-1);
+}
+
+.large {
+  font-size: var(--text-base);
+}
+
+.x-large {
+  font-size: var(--text-1);
+}
+
+.xx-large {
+  font-size: var(--text-2);
+}
+
+.xxx-large {
+  font-size: var(--text-3);
 }
