--- a/src/components/ui/Heading.astro
+++ b/src/components/ui/Heading.astro
@@ -33,7 +33,12 @@ const Tag = tagName;
 ---
 
 <Tag
-  class:list={["heading", sizeOptions[size], { bold: isBolded }, classList]}
+  class:list={[
+    "heading",
+    sizeOptions[size],
+    { "font-bold": isBolded },
+    classList,
+  ]}
   {...rest}
 >
   <slot />
@@ -42,32 +47,5 @@ const Tag = tagName;
 <style>
   .heading {
     line-height: var(--heading-line-height);
-    font-weight: var(--font-regular);
-  }
-
-  .bold {
-    font-weight: var(--font-bold);
-  }
-
-  .h1 {
-    font-size: var(--heading-7);
-  }
-  .h2 {
-    font-size: var(--heading-6);
-  }
-  .h3 {
-    font-size: var(--heading-5);
-  }
-  .h4 {
-    font-size: var(--heading-4);
-  }
-  .h5 {
-    font-size: var(--heading-3);
-  }
-  .h5 {
-    font-size: var(--heading-2);
-  }
-  .h6 {
-    font-size: var(--heading-1);
   }
 </style>
